@@ -122,7 +122,6 @@ SMPmatrix_CSC (SMPmatrix *Matrix)
 void
 SMPnnz (SMPmatrix *Matrix)
 {
-    Matrix->CKTkluN = spGetSize (Matrix->SPmatrix, 1) ;
     Matrix->CKTklunz = Matrix->SPmatrix->Elements ;
 
     return ;
